--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="slide"><img src="image/Image1.jpg" alt="Image 1"></div>
                 <div class="slide"><img src="image/Image2.jpg" alt="Image 2"></div>
                 <div class="slide"><img src="image/Image3.jpg" alt="Image 3"></div>
-                <div class="slide"><img src="image/Image4.jpg" alt="Image 4"></div>
+                <div class="slide"><img src="image/image4.jpg" alt="Image 4"></div>
             </div>
 
         </div>
